More test cases for sealed classes